--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "browser-sync": "2.27.10",
     "browserify": "17.0.0",
     "del": "6.1.1",
-    "eslint": "7.32.0",
+    "eslint": "^7.32.0",
     "gulp": "4.0.2",
     "gulp-concat": "2.6.1",
     "gulp-csso": "4.0.1",
